syntax = "proto3";

package proto;

service Mapper {
  rpc GetEmitResult(MapperRequest) returns (stream MapperResponse) {}
}

service MapperStream {
  rpc GetStreamEmitResult(stream MapperRequest) returns (stream MapperResponse) {}
}


message MapperRequest {
  string key = 1;
  string value = 2;
}

message MapperResponse {
  string key = 1;
  string value = 2;
}


service Reducer {
  rpc GetCollectResult(ReducerRequest) returns (stream ReducerResponse) {}
}

message ReducerRequest {
  string key = 1;
  repeated string value = 2;
}

message ReducerResponse {
  string key = 1;
  string value = 2;
}

service Master {
  rpc GetWork(WorkRequest) returns (stream WorkConfigResponse) {}
}

message WorkRequest {
  uint64 taskID = 1;
}

message WorkConfigResponse {
  repeated string key = 1;
  repeated string value = 2;
}


service Worker {
}